--- a/剑指offer 2/50 第一个只出现一次的字符.md
+++ b/剑指offer 2/50 第一个只出现一次的字符.md
@@ -4,9 +4,33 @@
 
 在字符串中查找第一次只出现一次的字符。
 
+#### 解题：
 
+- 创建一个哈希表`hashmap`，扫描字符串，把字符和次数记录下来
+- 第二次扫描字符串，把在map中把次数为1的字符找到
+- ASCII中65-90为A-Z，97-122为a-z，65到122总共58个格子，91-96这6个不用。用数组完美的表示了map。
 
-
+```java
+	public int FirstNotRepeatingChar(String str) {
+        
+        //创建map存放相应数字的个数（int[] 更一步简化了map）
+        int[] nums = new int[58];
+        
+        //记录每个字符出现的次数
+        for(int i=0; i<str.length(); i++){
+            nums[(int)str.charAt(i) - 65]++;
+        }
+        
+        //遍历字符串，找到第一个计数位为1的字符
+        for(int i=0; i<str.length(); i++){
+            if(nums[(int)str.charAt(i) - 65] == 1){
+                return i;
+            }
+        }
+        
+        return -1;
+    }
+```
 
 
 
@@ -15,4 +39,62 @@
 
 
 #### （扩展题）题目：字符流中第一次只出现一次的字符
+
+- 把字符存进hashmap中，value为出现的位置
+- 位置初始化为-1，第一次出现记录为当前的出现顺序，第二次出现则记录为-2
+- 遍历完字符串之后，只出现一次的字符，value大于等于0，从value里面找出一个最小index就行
+- hashmap用数组代替。
+
+```java
+public class Solution {
+    
+    //创建一个表示map的数组
+    int[] nums = new int[256];
+    
+    //创建一个标记流下标的数字
+    int index = -1;
+    
+    //初始化数组
+    public Solution(){
+        for(int i=0; i<nums.length; i++){
+            nums[i] = -1;
+        }
+    }
+    
+    //流数据插入到nums中，第一次出现插入下标index,第二次出现插入-2
+    public void Insert(char ch)
+    {
+        index++;
+        if(nums[ch] == -1){
+            nums[ch] = index;
+        }else if(nums[ch] >= 0){
+            nums[ch] = -2;
+        }
+    }
+    
+  //return the first appearence once char in current stringstream
+    public char FirstAppearingOnce()
+    {
+        char ch = '#';
+        
+        //记录最小的下标
+        int minIndex = Integer.MAX_VALUE;
+        
+        for(int i=0; i<nums.length; i++){
+            if(nums[i]>=0 && nums[i]<minIndex){
+                minIndex = nums[i];
+                ch = (char)i;
+            }
+        }
+        
+        return ch;
+    }
+}
+```
+
+
+
+
+
+
 
