--- a/剑指offer 2/52 两个链表中的第一个公共节点.md
+++ b/剑指offer 2/52 两个链表中的第一个公共节点.md
@@ -4,3 +4,53 @@
 
 输入两个链表，找出他们的第一个公共节点。
 
+#### 解题：
+
+- 获取两个链表的长度，取差值为preSteps
+- 长的链表先走preSteps步
+- 两个链表同时走，值相等的时候返回节点
+
+```java
+	public ListNode FindFirstCommonNode(ListNode pHead1, ListNode pHead2) {
+        int len1 = getLen(pHead1);
+        int len2 = getLen(pHead2);
+        
+        ListNode longListNode = pHead1;
+        ListNode shortListNode = pHead2;
+        if(len1 < len2){
+            longListNode = pHead2;
+            shortListNode = pHead1;
+        }
+        
+        int preSteps = Math.abs(len2-len1);
+        
+        //长的链表先走preSteps步
+        for(int i=0; i<preSteps; i++){
+            longListNode = longListNode.next;
+        }
+        
+        while(shortListNode != null){
+            if(shortListNode.val == longListNode.val){
+                return shortListNode;
+            }
+            
+            shortListNode = shortListNode.next;
+            longListNode = longListNode.next;
+        }
+        
+        return null;
+    }
+    
+    //获取链表的长度
+    public int getLen(ListNode pNode){
+        
+        int count = 0;
+        while(pNode != null){
+            count++;
+            pNode = pNode.next;
+        }
+        
+        return count;
+    }
+```
+
