--- a/剑指offer 2/53 在排序数组中查找数字.md
+++ b/剑指offer 2/53 在排序数组中查找数字.md
@@ -1,10 +1,80 @@
 ## 53 在排序数组中查找数字
 
-#### 题目一： 数字在排序数组中出现的次数
+#### 题目一： 数字k在排序数组中出现的次数
+
+普通方法：二分查找法，找到k之后，向两百年扩展判断是不是k。最差需要O(n)复杂度。
+
+
+
+改进二分查找：
+
+- 通过二分查找，找到第一个值和最后一个值，相减加一即可。
+- 两个二分查找的复杂度为log(n)，所以总的复杂度还是log(n)。
+
+```java
+	//在排序数组中查找某个数字k的个数
+	public int getKValueCount(int[] nums, int k) {
+		
+		int kLen = 0;
+		if(nums != null && nums.length>0) {
+			int firstIndex = getFirstKIndex(nums, k, 0, nums.length-1);
+			int lastIndex = getLastKIndex(nums, k, 0, nums.length-1);
+			kLen = lastIndex - firstIndex + 1;
+		}
+		
+		return kLen;
+	}
+	
+	//查找最后一个K出现的位置
+	public static int getLastKIndex(int[] nums, int k, int left, int right) {
+		while (left < right) {
+
+			int mid = left + (right - left) / 2;
+			int midNum = nums[mid];
+
+			if (midNum == k) {
+				if ((mid < nums.length-1 && nums[mid + 1] != k) || mid == nums.length-1) {
+					return mid;
+				} else { // 如果后一个数字也是k，那么就往后找
+					left = mid + 1;
+				}
+			} else if (midNum > k) {
+				left = mid + 1;
+			} else if (midNum < k) {
+				right = mid - 1;
+			}
+		}
+		return -1;
+	}
+
+	//查找第一个k出现的位置
+	public static int getFirstKIndex(int[] nums, int k, int left, int right) {
+		while(left < right) {
+			
+			int mid = left + (right-left)/2;
+			int midNum = nums[mid];
+			
+			if(midNum == k) {
+				if((mid>0 && nums[mid-1] != k) || mid==0) {
+					return mid;
+				}else {             //如果前一个数字也是k，那么就往前找
+					right = mid - 1;
+				}
+			}else if (midNum>k) {
+				left = mid + 1;
+			}else if (midNum<k) {
+				right = mid - 1;
+			}
+		}
+		return -1;
+	}
+```
 
 
 
 #### 题目二：0-（n-1）之间缺失的数字
+
+一个长度为n-1的递增序列数组中所有数字都是唯一的，并且每个数字都在0-(n-1)范围之内，0-(n-1)内的n个数字中，只有一个不在该数组中，请找出这个数字。
 
 
 
