--- a/剑指offer 2/53 在排序数组中查找数字.md
+++ b/剑指offer 2/53 在排序数组中查找数字.md
@@ -78,5 +78,103 @@
 
 
 
+如果一个数的坐标和值不相等，那说明缺失的数在前面或者就是这个数。直到找到一个数，值和下标不等，但前一个数的值和下标相等。
+
+```java
+	public int getMissingNum(int[] nums) {
+		
+		//1 判空
+		if(nums == null || nums.length <= 0) {
+			return -1;
+		}
+		
+		int left = 0;
+		int right = nums.length - 1;
+		
+		//2 找到第一个下标不等于值的数字
+		while(left <= right) {
+			
+			int mid = left + (right - left)/2;
+			
+			//如果下标和值不相等，则说明在[left, mid]这个范围内
+			if(nums[mid] != mid) {
+				
+				if(mid == 0 || nums[mid-1] == mid-1) {  //前一个值相等，当前值不相等，这就是要找的数
+					return mid;
+				}else {            //要找的坐标还在前面
+					right = mid - 1; 
+				}
+				
+			}
+			//如果坐标和值相等，则说明在[mid+1, right]范围内
+			else{
+				left = mid + 1;
+			}
+		}
+		
+		if(left == nums.length) {
+			return nums.length;
+		}
+		
+		return -1;
+	}
+```
+
+
+
+
+
 #### 题目三：数组中数值和下标相等的元素
+
+假设一个单调递增的数组里的每一个元素都是整数并且是唯一的，请实现一个函数，查找数组中任意一个数组等于其下标的元素。
+
+
+
+- 使用二分查找法
+
+- 如果刚好等于，就返回
+
+- 如果不等于：
+
+  - 由于值增长快，坐标增长慢
+
+  - 坐标大于值，说明在后面
+  - 坐标小于值，说明在前面
+
+
+
+```java
+	public int getIndexEqValue(int[] nums) {
+		
+		// 1 判空
+		if (nums == null || nums.length <= 0) {
+			return -1;
+		}
+		
+		int left = 0;
+		int right = nums.length - 1;
+		
+		//找一个值，坐标等于值
+		while(left <= right) {
+			
+			int mid = left + (right - left)>>1;
+			
+			if(nums[mid] == mid) {
+				return mid;
+			}
+				
+			// 坐标小于值，往前面找
+			if (mid < nums[mid]) {
+				right = mid - 1;
+			}
+			// 坐标大于值，往后面找
+			else {
+				left = mid + 1;
+			}	
+		
+		}
+		
+		return -1;
+	}
+```
 
