--- a/剑指offer 2/54 二叉搜索树的第k大节点.md
+++ b/剑指offer 2/54 二叉搜索树的第k大节点.md
@@ -2,3 +2,37 @@
 
 #### 题目：给定一棵二叉搜索树，请找出其中第k大节点。
 
+
+
+#### 解题（递归）：
+
+- 利用树的中序遍历，依次访问`1,2,3,4,5,6,7,8`
+- 先写框架，再写触底条件
+- 从最底层访问的元素来考虑
+
+````java
+	int sum = 0;
+    
+    public TreeNode KthNode(TreeNode pRoot, int k){
+        if(pRoot != null){
+            
+            TreeNode node = KthNode(pRoot.left, k);
+            if(node != null){
+                return node;
+            }
+            
+            if(++sum == k){
+                return pRoot;
+            }
+            
+            node = KthNode(pRoot.right, k);
+            if(node != null){
+                return node;
+            }
+            
+        }
+        
+        return null;
+    }
+````
+
