--- a/剑指offer 2/59 队列的最大值.md
+++ b/剑指offer 2/59 队列的最大值.md
@@ -8,3 +8,64 @@
 
 
 
+#### 解题：
+
+- 双向链表
+- 把下标放进链表
+- 超出窗口的下标从链表头部删除
+- 小于当前值的从尾部删除
+- 添加当前值下标
+- 如果足够一个窗口，把链表头部下标添加进入结果。
+
+```java
+public static ArrayList<Integer> maxInWindows(int[] num, int size) {
+		
+		ArrayList<Integer> res = new ArrayList<>();
+		
+		if (size == 0) {
+			return res;
+		}
+		
+		//代表当前窗口的第一个值所在的下标（小于0表示第一个窗口还没加载完）
+		int begin;
+		
+		//双向队列，既可以从头部删除，又可以从尾部删除（存储数组下标）
+		ArrayDeque<Integer> q = new ArrayDeque<>();
+		
+		for (int i = 0; i < num.length; i++) {
+			
+			//以当前值为窗口的最后一个节点，begin代表第一个值所在下标
+			begin = i - size + 1;
+			
+			//空窗口添加值
+			if (q.isEmpty()) {
+				q.add(i);
+			}
+			//如果队列的值都不在窗口范围了，删除这个最大值下标，此后所有的下标都在窗口内
+			else if (begin > q.peekFirst()) {
+				q.pollFirst();
+			}
+			
+			//（队列中的下标都在同一个窗口内）删除队列尾小于当前数的下标
+			//A；把当前这个较大的值的下标放进队列      B：如果num[q.peekLast()] > num[i]，也加进队列，因为下一个窗口它可能就是最大值了
+			while ((!q.isEmpty()) && num[q.peekLast()] <= num[i]) {
+				q.pollLast();
+			}
+			q.add(i);
+			
+			
+			if (begin >= 0) {
+				res.add(num[q.peekFirst()]);				
+			}
+		}
+		return res;
+	}
+```
+
+
+
+
+
+#### （扩展）队列的最大值
+
+请定义一个队列，并实现函数max，得到队列里面最大的值，要求函数max、push_back和pop_front的时间复杂度都是O(1)。
