--- a/剑指offer 2/59 队列的最大值.md
+++ b/剑指offer 2/59 队列的最大值.md
@@ -69,3 +69,59 @@ public static ArrayList<Integer> maxInWindows(int[] num, int size) {
 #### （扩展）队列的最大值
 
 请定义一个队列，并实现函数max，得到队列里面最大的值，要求函数max、push_back和pop_front的时间复杂度都是O(1)。
+
+**跟上题一样思想，这里的队列就是滑动窗口。**
+
+```java
+	public class QueueMaxValues2 {
+	
+	LinkedList<InternData> mData = new LinkedList<>();
+	LinkedList<InternData> mMax = new LinkedList<>();
+	int index = -1;
+	
+	//增
+	public void push(int number) {
+		while((!mMax.isEmpty()) && number >= mMax.getLast().value) {
+			mMax.removeLast();
+		}
+		
+		InternData nodeData = new InternData(number, index++);
+		mData.addLast(nodeData);
+		mMax.addLast(nodeData);
+	}
+	
+	//删
+	public int pop() throws Exception {
+		if(mData.isEmpty()) {
+			throw new Exception("数据队列为空！！！");
+		}
+		if(mData.getLast().index == mMax.getLast().index) {
+			mMax.removeLast();
+		}
+		return mData.removeFirst().value;
+	}
+	
+	//获取最大值
+	public int max() throws Exception {
+		if(mMax.isEmpty()) {
+			throw new Exception("最大值队列为空！！！");
+		}
+		return mMax.removeFirst().value;
+	}
+	
+	
+	//定义一个内部类
+	private class InternData {
+		int index;
+		int value;
+		
+		public InternData(int index, int value) {
+			this.index = index;
+			this.value = value;
+		}
+	}
+	
+}
+
+```
+
